--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-crispy-forms = "*"
+newsapi-python = "*"
+urllib3 = "*"
+pycountry = "*"
 
 [dev-packages]
 
